Fixing photo caption overflow problem.

--- a/app/stylesheets/spoonfeed/_css/spoonfeed.scss
+++ b/app/stylesheets/spoonfeed/_css/spoonfeed.scss
@@ -4091,6 +4091,10 @@ hgroup h5 span {
           left: 50px;
   }
   a:hover {color: #222!important;}
+
+  #photos .credit {
+    width: 345px;
+  }
 }
 
 .mainContainer .search-results {
